--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -12,12 +12,12 @@
   <body>
     <nav>
       <div class="navbar">
-        <div class="logo">MyBrand</div>
+        <div class="logo">AirDaska</div>
         <div class="nav-links" id="navLinks">
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Services</a>
-          <a href="#">Portfolio</a>
+          <a href="{%url 'home'%}">Home</a>
+          <a href="{%url 'flights'%}">Flights</a>
+          <a href="{%url 'index'%}">Booking</a>
+          <a href="{%url 'loginUser'%}">Login</a>
           <a href="#" class="cta">Contact</a>
         </div>
         <div class="hamburger" id="hamburger">
