--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -8,10 +8,10 @@
         <input type="password" name="password" placeholder="Password">
         <input type="submit">
     </form>
-    <a href="#">New User? </a>
-    {% comment %} {%if message%}
+    <a href="{%url 'register'%}">New User? </a>
+    {%if message%}
         <h5 style="color: red; font:bolder">
             {{message}}
         </h5>
-    {%endif%} {% endcomment %}
+    {%endif%}
 {% endblock %}
