--- a/accounts/templates/accounts/user.html
+++ b/accounts/templates/accounts/user.html
@@ -2,5 +2,11 @@
 
 {%block content%}
     <h2>User</h2>
-    
+    <span style="font:bold; ">Username:</span>
+    <span>{{username}}</span>
+    <br>
+    <span style="font:bold; ">Email:</span>
+    <span> {{email}}</span>
+    <br>
+    <a href="{%url 'logoutUser'%}" > Logout </a>
 {%endblock%}
