--- a/accounts/templates/accounts/user.html
+++ b/accounts/templates/accounts/user.html
@@ -8,5 +8,6 @@
     <span style="font:bold; ">Email:</span>
     <span> {{email}}</span>
     <br>
-    <a href="{%url 'logoutUser'%}" > Logout </a>
+    <a href="{%url 'logoutUser'%}" > Logout </a> <br>
+    <a href="{%url 'edit'%}">Edit Profile</a>
 {%endblock%}
